- Moved GmsImpl.leaving and GmsServerImpl.leave_promise to GMS