@@ -12,6 +12,7 @@ import org.testng.annotations.Test;
 import java.io.*;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.ByteBuffer;
+import java.text.DecimalFormatSymbols;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
@@ -54,8 +55,7 @@ public class UtilTest {
         assert expected_permutations == permutation_size:
           String.format("expected %d combinations, got %d\n", expected_permutations, permutation_size);
 
-        Set<List<Integer>> set=new HashSet<>();
-        set.addAll(permutations);
+        Set<List<Integer>> set=new HashSet<>(permutations);
         assert set.size() == permutations.size();
     }
 
@@ -259,6 +259,8 @@ public class UtilTest {
         long num;
         String s;
 
+        char decimal_sep=DecimalFormatSymbols.getInstance().getDecimalSeparator();
+
         num=1;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
@@ -272,57 +274,57 @@ public class UtilTest {
         num=1000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.00KB", s);
+        Assert.assertEquals("1" + decimal_sep +"00KB", s);
 
         num=1001;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.00KB", s);
+        Assert.assertEquals("1"+decimal_sep+"00KB", s);
 
         num=1010;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.01KB", s);
+        Assert.assertEquals("1"+decimal_sep+"01KB", s);
 
         num=1543;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.54KB", s);
+        Assert.assertEquals("1"+decimal_sep+"54KB", s);
 
         num=10000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("10.00KB", s);
+        Assert.assertEquals("10"+decimal_sep+"00KB", s);
 
         num=150000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("150.00KB", s);
+        Assert.assertEquals("150"+decimal_sep+"00KB", s);
 
         num=150023;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("150.02KB", s);
+        Assert.assertEquals("150"+decimal_sep+"02KB", s);
 
         num=1200000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.20MB", s);
+        Assert.assertEquals("1"+decimal_sep+"20MB", s);
 
         num=150000000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("150.00MB", s);
+        Assert.assertEquals("150"+decimal_sep+"00MB", s);
 
         num=150030000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("150.03MB", s);
+        Assert.assertEquals("150"+decimal_sep+"03MB", s);
 
         num=1200000000;
         s=Util.printBytes(num);
         System.out.println(num + " is " + s);
-        Assert.assertEquals("1.20GB", s);
+        Assert.assertEquals("1"+decimal_sep+"20GB", s);
     }
 
 
@@ -443,7 +445,7 @@ public class UtilTest {
           false,
           Boolean.FALSE,
           (byte)22,
-          new Byte("2"),
+          Byte.valueOf("2"),
           '5',
           3.14,
           352.3f,
@@ -645,14 +647,14 @@ public class UtilTest {
         // test heap based ByteBuffer:
         String hello="hello";
         byte[] buffer=hello.getBytes();
-        ByteBuffer buf=(ByteBuffer)ByteBuffer.allocate(50).putInt(322649).put(buffer).flip();
+        ByteBuffer buf=ByteBuffer.allocate(50).putInt(322649).put(buffer).flip();
         buf.getInt();
         MyNioReceiver receiver=new MyNioReceiver();
         receiver.receive(null, buf);
         assert receiver.name.equals(hello);
 
         // test direct ByteBuffer:
-        buf=(ByteBuffer)ByteBuffer.allocateDirect(50).putInt(322649).put(buffer).flip();
+        buf=ByteBuffer.allocateDirect(50).putInt(322649).put(buffer).flip();
         buf.getInt();
         receiver.receive(null, buf);
         assert receiver.name.equals(hello);
